# xmcinter

./: .gitignore  README.md  astro_utilities.py  file_utilities.py  mkdocs.yml  plots.py  pyproject.toml  requirements.txt  setup.py  setup_xmcinter.sh  wrangle.py  xmcfiles.py  xmcmap.py
docs/: index.md
docs/core-modules/: diagnostics.md  plots.md  wrangle.md  xmcfiles.md  xmcmap.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: function-index.md
docs/tutorials/: creating-maps.md  diagnostics.md  filtering-blobs.md  reading-xmc-output.md
docs/utilities/: astro_utilities.md  file_utilities.md
scripts/: maps.py
site/: 404.html  index.html
site/core-modules/diagnostics/: index.html
site/core-modules/plots/: index.html
site/core-modules/wrangle/: index.html
site/core-modules/xmcfiles/: index.html
site/core-modules/xmcmap/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/reference/function-index/: index.html
site/search/: search_index.json
site/tutorials/creating-maps/: index.html
site/tutorials/diagnostics/: index.html
site/tutorials/filtering-blobs/: index.html
site/tutorials/reading-xmc-output/: index.html
site/utilities/astro_utilities/: index.html
site/utilities/file_utilities/: index.html
src/xmcinter/: diagnostics.py  file_utilities.py  plots.py  xmcfiles.py  xmcmap.py
src/xmcinter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xmcinter/idl_maps/: make_map_wrapper.py
src/xmcinter/scripts/: cleaning.py  diagnostic_init.py  (+1 more)
