[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xmcinter"
version = "1.0.0"
description = "XMC analysis interface"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.10",
    "astropy>=6.0",
    "bokeh>=3.0",
    "ipython>=8.0",
    "jupyter>=1.0"
]

[tool.setuptools]
package-dir = {"" = 'src'}

[tool.setuptools.packages.find]
where = ["src"]

